Fix my DNS histograms to notice when internal resolver is enabled

Previously my DNS histograms incorrectly thought the internal
resolver was not used when it in fact was.

Bug: 908535
Change-Id: I1c3a8d41298b91d23236649de72299c47cf93926
Reviewed-on: https://chromium-review.googlesource.com/c/1351742
Commit-Queue: Paul Jensen <pauljensen@chromium.org>
Reviewed-by: Misha Efimov <mef@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612343}
Former-commit-id: 1e501e3d04037d0fe9b3ecb103be7423bc0175b6